# flucq

./: CMakeLists.txt  Jstuff.f  animain.f  commons  dgesv.f  geniostuff.f  iostuff.f  mathstuff.f  propsm.f  qdyn.f  qdynmd.f  qpotstuff.f
support/: CMakeLists.txt  grabcl.f  hdpe.f  stin.f
